# wrld-sdk-samples

./: .gitignore  .gitignore.swp  LICENSE.md  README.md  build.gradle  build.sh  test.update.platform.sh  update.platform.sh
android/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  build.sh  do_make.sh  local.properties  settings.gradle
android/app/arm/: build.gradle
android/app/arm64/: build.gradle
android/app/src/main/assets/route_simulation_example/: car1.pod  car3.pod
android/app/src/main/jni/: Android.mk  AppRunner.cpp  main.h
android/app/src/main/res/layout/: activity_main.xml
android/assets/: embedded_manifest.txt
android/assets/Labels/: label_style_sheet.json
android/jni/: Android.mk  AndroidVRModeTracker.cpp  AndroidVRModeTracker.h  AppHost.cpp  AppHost.h  AppRunner.cpp  AppRunner.h  CMakeLists.txt  GlDisplayService.cpp  main.cpp  main.h
android/jni/Examples/: CMakeLists.txt
android/jni/Examples/AndroidExampleControllerView/: AndroidExampleControllerView.cpp  CMakeLists.txt
android/jni/Examples/JavaHudCrossThreadCommunication/: CMakeLists.txt  JavaHudCrossThreadCommunicationExample.cpp  JavaHudCrossThreadCommunicationExample.h  JavaHudCrossThreadCommunicationExampleFactory.cpp  JavaHudCrossThreadCommunicationProxy.cpp
android/jni/Examples/MarkersWithAttachedJavaUI/: CMakeLists.txt  MarkersWithAttachedJavaUIExample.cpp  MarkersWithAttachedJavaUIExample.h  MarkersWithAttachedJavaUIExampleFactory.cpp  MarkersWithAttachedJavaUIExampleFactory.h
android/jni/Examples/PinsWithAttachedJavaUI/: CMakeLists.txt  PinsWithAttachedJavaUIExample.cpp  PinsWithAttachedJavaUIExample.h  PinsWithAttachedJavaUIExampleFactory.cpp  PinsWithAttachedJavaUIExampleFactory.h
android/jni/Examples/PositionJavaPinButton/: CMakeLists.txt  PositionJavaPinButtonExample.cpp  PositionJavaPinButtonExample.h  PositionJavaPinButtonExampleFactory.cpp  PositionJavaPinButtonExampleFactory.h
android/jni/Examples/RouteMatching/: AndroidRouteMatchingExampleView.cpp  CMakeLists.txt
android/jni/Examples/RouteSimulation/: AndroidRouteSimulationExampleView.cpp  AndroidRouteSimulationProxy.cpp  CMakeLists.txt
android/jni/Examples/RoutingService/: AndroidRoutingServiceExampleView.cpp  AndroidRoutingServiceExampleView.h  AndroidRoutingServiceExampleViewFactory.cpp  AndroidRoutingServiceExampleViewFactory.h  AndroidRoutingServiceProxy.cpp  AndroidRoutingServiceProxy.h  CMakeLists.txt
android/jni/Examples/ShowJavaPlaceJumpUI/: CMakeLists.txt  ExampleCameraJumpController.cpp  ExampleCameraJumpController.h  ShowJavaPlaceJumpUIExample.cpp  ShowJavaPlaceJumpUIExample.h  ShowJavaPlaceJumpUIExampleFactory.cpp  ShowJavaPlaceJumpUIExampleFactory.h
android/res/layout/: embedded_app_image_fragment.xml  embedded_app_main.xml  embedded_app_map_fragment.xml  embedded_app_text_fragment.xml  routing_service_menu_layout.xml
android/res/values/: strings.xml
android/src/com/eegeo/: BackgroundThreadActivity.java
android/src/com/eegeo/examples/: NativeThreadOnClickHandler.java
android/src/com/eegeo/examples/examplecontroller/: ExampleControllerHud.java  SelectExampleOnItemSelectedListener.java  SelectPreviousExampleOnClickListener.java
android/src/com/eegeo/examples/placejump/: PlaceJumpMenu.java  VisitButtonOnClickListener.java
android/src/com/eegeo/examples/routematching/: RouteMatchingExampleHud.java  ToggleRouteMatchingOnClickListener.java
android/src/com/eegeo/examples/routesimulation/: RouteSimulationExampleHud.java  ToggleDirectFollowOnClickListener.java  ToggleSideOfRoadToDriveOnOnClickListener.java
android/src/com/eegeo/location/: HeadingService.java  LocationService.java
android/src/com/eegeo/mobilesdkharness/: BackgroundThreadActivity.java  IVRModeTracker.java  MainActivity.java  NativeJniCalls.java  VRModule.java
android/src/com/eegeo/web/: ConnectivityServiceJniMethods.java  NetworkChangeReceiver.java  NetworkChangeReceiverRegistrationService.java  UrlEncoder.java
ios/: CMakeLists.txt  ExampleAppCpp11-Info.plist  README.md  build.sh  make_project.sh
ios/ExampleApp/: ExampleApp-Info.plist  SDKSamplesApp-Info.plist
ios/ExampleApp.xcodeproj/: project.pbxproj
ios/ExampleApp.xcodeproj/project.xcworkspace/xcshareddata/: ExampleApp.xccheckout
ios/ExampleApp/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/Resources/: CMakeLists.txt
ios/Resources/Labels/: label_style_sheet.json
ios/Resources/route_simulation_example/: car2.pod
ios/SDKSamplesApp.xcodeproj/: project.pbxproj
ios/SDKSamplesApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/SDKSamplesApp.xcodeproj/project.xcworkspace/xcshareddata/: SDKSamplesApp.xccheckout
ios/ios_src/: App-Info.plist.in  AppHost.h  AppHost.mm  AppInputDelegate.mm  AppLocationDelegate.h  AppLocationDelegate.mm  AppRunner.h  AppRunner.mm  CMakeLists.txt  GlDisplayService.h  GlDisplayService.mm  MyAppDelegate.h  MyAppDelegate.mm  ViewController.mm
ios/ios_src/CardboardSDK/: CBDStereoGLView.m  CBDViewController.h  CBDViewController.mm  CMakeLists.txt  CardboardSDK.h
ios/ios_src/CardboardSDK/Cardboard/: CMakeLists.txt  DistortionRenderer.mm
ios/ios_src/CardboardSDK/Cardboard/Sensors/: CMakeLists.txt  HeadTracker.mm
ios/ios_src/CardboardSDK/Misc/: CMakeLists.txt  VRGLHelpers.m
ios/ios_src/Examples/: CMakeLists.txt  IosVRModeTracker.cpp  IosVRModeTracker.h  iOSExampleControllerView.h  iOSExampleControllerView.mm  iOSUIHelpers.h
ios/ios_src/Examples/Cardboard/: CMakeLists.txt  CardboardSDKService.h  CardboardSDKService.mm  IosVRModeTracker.cpp  IosVRModeTracker.h
ios/ios_src/Examples/RouteMatching/: CMakeLists.txt  iOSRouteMatchingExampleView.h  iOSRouteMatchingExampleView.mm  iOSRouteMatchingExampleViewFactory.mm
ios/ios_src/Examples/RouteSimulation/: CMakeLists.txt  iOSRouteSimulationExampleView.h  iOSRouteSimulationExampleView.mm  iOSRouteSimulationExampleViewFactory.mm
ios/ios_src/Examples/RoutingService/: CMakeLists.txt  iOSRoutingServiceExampleView.h  iOSRoutingServiceExampleView.mm  iOSRoutingServiceExampleViewFactory.h  iOSRoutingServiceExampleViewFactory.mm
src/: CMakeLists.txt  (+2 more)
(+349 files in other folders)
